Fix subpages header readability issue

--- a/css/main.css
+++ b/css/main.css
@@ -1545,11 +1545,12 @@ body {
 }
 
 #main-header.subpage__installations {
-  background-size: 200%;
+  background-size: 230%;
   height: 70vh;
   background-position: center center;
   overflow: hidden;
-  background-image: url(../img/installations-bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.3))), url(../img/installations-bg.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.3)), url(../img/installations-bg.jpg);
 }
 
 @media (min-width: 512px) {
@@ -1561,6 +1562,7 @@ body {
 
 @media (min-width: 840px) {
   #main-header.subpage__installations {
+    background-size: 100%;
     height: 70vh;
   }
 }
@@ -1577,11 +1579,12 @@ body {
 }
 
 #main-header.subpage__lan-installations {
-  background-size: 200%;
+  background-size: 230%;
   height: 70vh;
   background-position: center center;
   overflow: hidden;
-  background-image: url(../img/lan-installations-bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.3))), url(../img/lan-installations-bg.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.3)), url(../img/lan-installations-bg.jpg);
 }
 
 @media (min-width: 512px) {
@@ -1593,6 +1596,7 @@ body {
 
 @media (min-width: 840px) {
   #main-header.subpage__lan-installations {
+    background-size: 100%;
     height: 70vh;
   }
 }
@@ -1609,11 +1613,12 @@ body {
 }
 
 #main-header.subpage__monitoring {
-  background-size: 200%;
+  background-size: 230%;
   height: 70vh;
   background-position: center center;
   overflow: hidden;
-  background-image: url(../img/monitoring.bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.2))), url(../img/monitoring.bg.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.2)), url(../img/monitoring.bg.jpg);
 }
 
 @media (min-width: 512px) {
@@ -1625,6 +1630,7 @@ body {
 
 @media (min-width: 840px) {
   #main-header.subpage__monitoring {
+    background-size: 100%;
     height: 70vh;
   }
 }
