--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -20,7 +20,7 @@
 }
 
 @mixin subpagesHeader {
-    background-size: 200%;
+    background-size: 230%;
     height: 70vh;
     background-position: center center;
     overflow: hidden;
@@ -31,6 +31,7 @@
     }
 
     @include breakpoint(sm) {
+        background-size: 100%;
         height: 70vh;
     }
 
